--- a/code/jovanaandrejevic_code.ipynb
+++ b/code/jovanaandrejevic_code.ipynb
@@ -87,7 +87,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.decomposition import PCA\n",
@@ -18414,14 +18416,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# save the animation\n",
-    "ani.save('../artifacts/jovanaandrejevic_artifact.mp4')"
+    "ani.save('../artifacts/jovanaandrejevic_artifact.gif', writer='imagemagick', fps=1)"
    ]
   },
   {
