--- a/code/jovanaandrejevic_code.ipynb
+++ b/code/jovanaandrejevic_code.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Principal Component Analysis\n",
+    "## Principal Component Analysis Introduction\n",
     "\n",
     "Principal component analysis is a technique in data science that finds an optimal, alternate and often reduced representation of high-dimensional data. Optimal in the context of PCA means that the coordinates of the data in the transformed basis capture the greatest variability in the data.\n",
     "\n",
@@ -26,6 +26,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Code and Animation\n",
     "We begin by defining a short routine to load all image data:"
    ]
   },
@@ -42,9 +43,11 @@
     "import numpy as np\n",
     "\n",
     "def load_data(ddir, ext):\n",
+    "    ''' read in all image files in directory ddir with specified extension\n",
+    "        into a numpy array of shape (N, m, n, p), where N is number of samples,\n",
+    "        m x n is the image dimension, and p is the number of channels.'''\n",
     "    print(\"loading data ...\")\n",
     "    files = sorted(glob.glob(ddir+\"*.\"+ext))\n",
-    "    keys = []\n",
     "    for i,f in enumerate(files):\n",
     "        if i==0:\n",
     "            im = imread(f)\n",
@@ -52,11 +55,10 @@
     "            im = im.reshape(1, m, n, p)\n",
     "        else:\n",
     "            im = np.append(im,imread(f).reshape(1, m, n, p), axis=0)\n",
-    "        keys += [f[len(ddir):-4]]\n",
     "    if ext==\"jpg\":\n",
-    "        im = im.astype(np.float)/255.\n",
+    "        im = im.astype(np.float)/255. # convert to [0,1] scale\n",
     "    print(\"load complete!\")\n",
-    "    return im, keys"
+    "    return im"
    ]
   },
   {
@@ -74,32 +76,40 @@
     }
    ],
    "source": [
-    "data, keys = load_data(\"../vg_data/\",\"jpg\")"
+    "# load the data of van Gogh's portraits\n",
+    "data = load_data(\"../vg_data/\",\"jpg\")"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, using `scikit-learn`'s PCA class, we fit the principal axes of our dataset, which includes $116$ images."
+    "Next, using [`scikit-learn`'s PCA](https://scikit-learn.org/stable/modules/generated/sklearn.decomposition.PCA.html#sklearn.decomposition.PCA) class, we fit the principal axes of our dataset, which includes $116$ images."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PCA(copy=True, iterated_power='auto', n_components=None, random_state=None,\n",
+       "  svd_solver='full', tol=0.0, whiten=False)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from sklearn.decomposition import PCA\n",
     "\n",
     "N, m, n, p = data.shape\n",
-    "mu = np.mean(data.reshape(N, m*n*p), axis=0).reshape(m, n, p)\n",
-    "\n",
-    "pca = PCA(svd_solver='full')\n",
-    "pca.fit(data.reshape(N, m*n*p))\n",
-    "proj = pca.transform(data.reshape(N,m*n*p))"
+    "pca = PCA(svd_solver='full')     # svd_solver='full' means run the full SVD via scipy.linalg.svd\n",
+    "pca.fit(data.reshape(N, m*n*p))  # fit principal axes to our data"
    ]
   },
   {
@@ -157,11 +167,13 @@
    },
    "outputs": [],
    "source": [
-    "# animation setup\n",
+    "# animation setup: Refs 4 and 5 cited at the end were used as a general guide.\n",
     "\n",
     "frames = [1,2,3,4,5,6,7,8,9,10,15,20,25,30,35,40,45,50,60,70,80,90,100]\n",
     "def get_images(ncomp):\n",
-    "    # reconstruction in original image space using the first ncomp principal components\n",
+    "    '''Image reconstruction in original image space using the first ncomp principal components.\n",
+    "       Also returns the representation of the ncomp-1 principal axis in image space.'''\n",
+    "    # reconstructed image\n",
     "    data = mu + np.dot(pca_b[0,:ncomp],pca.components_[:ncomp,:]).reshape(m, n, p)\n",
     "    data[data<0]=0\n",
     "    data[data>1]=1\n",
@@ -174,7 +186,7 @@
     "    return data, red_pax, green_pax, blue_pax\n",
     "\n",
     "def get_evr(ncomp):\n",
-    "    # cumulative explained variance ratio\n",
+    "    '''Return cumulative explained variance ratio.'''\n",
     "    return np.arange(ncomp+1), np.hstack([0,pca.explained_variance_ratio_[:ncomp].cumsum()])"
    ]
   },
@@ -189,13 +201,13 @@
     "# initialize figure\n",
     "fig = plt.figure(figsize=(10,10))\n",
     "grid = plt.GridSpec(3, 3, wspace=0.1, hspace=0.1)\n",
-    "axr = fig.add_subplot(grid[:2,:2])     # reconstructed image\n",
+    "axr = fig.add_subplot(grid[:2,:2])     # reconstructed image plot\n",
     "ax1 = fig.add_subplot(grid[0,2])       # principal axis projection: red channel\n",
     "ax2 = fig.add_subplot(grid[1,2])       # principal axis projection: green channel\n",
     "ax3 = fig.add_subplot(grid[2,2])       # principal axis projection: blue channel\n",
     "axp = fig.add_subplot(grid[2,:2])      # explained variance ratio plot\n",
     "\n",
-    "# reconstructed image\n",
+    "# reconstructed image plot\n",
     "im = axr.imshow(get_images(1)[0])\n",
     "axr.set_title(\"reconstructed image\", size=16)\n",
     "axr.set_xticks([])\n",
@@ -205,7 +217,6 @@
     "red_pax, green_pax, blue_pax = get_images(1)[1:]\n",
     "pr = plt.imread(\"figures/portrait.png\")\n",
     "for ax in [ax1, ax2, ax3]:\n",
-    "    ax.clear()\n",
     "    ax.imshow(pr)\n",
     "    ax.yaxis.set_label_position(\"right\")\n",
     "    ax.set_xticks([])\n",
@@ -220,18 +231,19 @@
     "\n",
     "# cumulative explained variance ratio\n",
     "x, y = get_evr(frames[-1])\n",
-    "axp.plot(x, y, color='teal', alpha=0.5, linestyle='dashed')\n",
+    "axp.plot(x, y, color='teal', alpha=0.5, linestyle='dashed') # plot a static guiding curve\n",
     "x, y = get_evr(1)\n",
-    "line, = axp.plot(x, y, color='orange', linewidth=4)\n",
+    "line, = axp.plot(x, y, color='orange', linewidth=4)         # plot updating curve\n",
     "pt, = axp.plot(x[-1], y[-1], 'o', color='orange', linewidth=6)\n",
     "axp.set_ylabel(\"cumulative explained\\nvariance ratio\", size=16)\n",
     "axp.set_xlabel(\"Number of components\", size=16)\n",
     "\n",
     "def animate(i):\n",
+    "    '''Plot updates for animation.'''\n",
     "    data, red_pax, green_pax, blue_pax = get_images(i)\n",
-    "    im.set_data(data)\n",
+    "    im.set_data(data) # update reconstructed image\n",
     "    for ax in [ax1, ax2, ax3]:\n",
-    "        ax.clear()\n",
+    "        ax.clear() # clear axes for new plot; needed as contourf lacks set_data method.\n",
     "        ax.imshow(pr)\n",
     "        ax.yaxis.set_label_position(\"right\")\n",
     "        ax.set_xticks([])\n",
@@ -248,6 +260,7 @@
     "    line.set_ydata(y)\n",
     "    pt.set_xdata(x[-1])\n",
     "    pt.set_ydata(y[-1])\n",
+    "    # set a title for the figure as a whole\n",
     "    if i==1:\n",
     "        fig.suptitle('1 principal component',size=20)\n",
     "    else:\n",
@@ -18416,7 +18429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -18424,6 +18437,25 @@
    "source": [
     "# save the animation\n",
     "ani.save('../artifacts/jovanaandrejevic_artifact.gif', writer='imagemagick', fps=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## References\n",
+    "\n",
+    "1. \"Vincent van Gogh, his Life and Paintings.\" Vincent van Gogh Paintings, Drawings, Quotes, and Biography. [https://www.vincentvangogh.org/](https://www.vincentvangogh.org/).\n",
+    "\n",
+    "2. VanderPlas, Jake. \"In Depth: Principal Component Analysis.\" Python Data Science Handbook: Essential tools for working with data. \" O'Reilly Media, Inc.\", 2016. [https://jakevdp.github.io/PythonDataScienceHandbook/05.09-principal-component-analysis.html](https://jakevdp.github.io/PythonDataScienceHandbook/05.09-principal-component-analysis.html).\n",
+    "\n",
+    "3. “Sklearn.decomposition.PCA.” Scikit-Learn 0.19.2 Documentation, [scikit-learn.org/stable/modules/generated/sklearn.decomposition.PCA.html#sklearn.decomposition.PCA](scikit-learn.org/stable/modules/generated/sklearn.decomposition.PCA.html#sklearn.decomposition.PCA).\n",
+    "\n",
+    "4. Tiao, Louis. “Embedding Matplotlib Animations in Jupyter Notebooks.” Louis Tiao, 16 Apr. 2016, [louistiao.me/posts/notebooks/embedding-matplotlib-animations-in-jupyter-notebooks/](louistiao.me/posts/notebooks/embedding-matplotlib-animations-in-jupyter-notebooks/).\n",
+    "\n",
+    "5. Tiao, Louis. “Save Matplotlib Animations as GIFs.” Louis Tiao, 4 Aug. 2016, [http://louistiao.me/posts/notebooks/save-matplotlib-animations-as-gifs/](http://louistiao.me/posts/notebooks/save-matplotlib-animations-as-gifs/)."
    ]
   },
   {
