Update text and comments.

--- a/code/jovanaandrejevic_code.ipynb
+++ b/code/jovanaandrejevic_code.ipynb
@@ -8,11 +8,11 @@
     "\n",
     "An artist's perception of the world is often through a different lens. Vincent van Gogh, working during the Impressionist Era, rejected the exactness of increasingly popular photography in favor of simpler representations, reducing the subjects of his paintings to their essential features. Produced with coarse, prominent brush strokes or an unconventional color palette, van Gogh's portraits were unmistakably distinguishable, though deliberately different from an exact likeness.\n",
     "\n",
-    "Principal component analysis is much like a view through an artist's eye. By reducing a collection of data only to those features which capture the greatest *variability* across the dataset, it can provide a simpler representation of high-dimensional data.\n",
+    "Principal component analysis is much like a view through van Gogh's eyes. By reducing a collection of data only to those features which capture the greatest *variability* across the dataset, it can provide a simpler representation of high-dimensional data.\n",
     "\n",
     "A common application of principal component analysis is dimensionality reduction, as principal components are sorted to express as much variability in the data as possible. We will use animation to illustrate how principal component analysis can be used to reconstruct an image with considerably less information needed.\n",
     "\n",
-    "As our test image dataset, we have collected color images of Vincent van Gogh's portrait artwork, cropped to a uniform $136\\times136$ pixel region - an image basis of $136\\times136\\times3=55488$ basis vectors. All images are obtained from [vincentvangogh.org](https://www.vincentvangogh.org/), which hosts a gallery of van Gogh's works.\n",
+    "As our test image dataset, we have collected color images of Vincent van Gogh's portrait artwork, cropped to a uniform $136\\times136$ pixel region. All images are obtained from [vincentvangogh.org](https://www.vincentvangogh.org/), which hosts a gallery of van Gogh's works.\n",
     "\n",
     "Principal component analysis involves a change of basis; rather than characterizing each image by a set of coordinates representing pixel RGB values, the image can be suitably represented in a new basis of principal axes, which is typically smaller than the initial number of coordinates. Each principal axis is some linear combination of the image basis vectors, formed so that the coordinate of the images along the first principal axis - their first principal component - has the largest variance. The second principal axis is chosen such that the second principal component has the next largest possible variance while maintaining that the second and first principal axes are orthogonal, and so on."
    ]
@@ -180,7 +180,8 @@
     "frames = [1,2,3,4,5,6,7,8,9,10,15,20,25,30,35,40,45,50,60,70,80,90,100]\n",
     "def get_images(ncomp):\n",
     "    '''Image reconstruction in original image space using the first ncomp principal components.\n",
-    "       Also returns the representation of the ncomp-1 principal axis in image space.'''\n",
+    "       Also returns the representation of the ncomp-1 principal axis in image space, and the\n",
+    "       value of the first ncomp principal components of the selected image.'''\n",
     "    # reconstructed image\n",
     "    data = mu + np.dot(pca_b[0,:ncomp],pca.components_[:ncomp,:]).reshape(m, n, p)\n",
     "    data[data<0]=0\n",
@@ -197,7 +198,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# initialize figure\n",
@@ -207,13 +210,13 @@
     "ax1 = fig.add_subplot(grid[0,0])       # principal axis projection: red channel\n",
     "ax2 = fig.add_subplot(grid[0,1])       # principal axis projection: green channel\n",
     "ax3 = fig.add_subplot(grid[0,2])       # principal axis projection: blue channel\n",
-    "axr = fig.add_subplot(grid[:,3:])     # reconstructed image plot\n",
+    "axr = fig.add_subplot(grid[:,3:])      # reconstructed image plot\n",
     "\n",
     "# principal axis in image space\n",
     "red_pax, green_pax, blue_pax, y = get_images(frames[-1])[1:]\n",
-    "pr1 = plt.imread(\"figures/red.png\")\n",
-    "pr2 = plt.imread(\"figures/green.png\")\n",
-    "pr3 = plt.imread(\"figures/blue.png\")\n",
+    "pr1 = plt.imread(\"figures/red.png\")    # background reference image\n",
+    "pr2 = plt.imread(\"figures/green.png\")  # background reference image\n",
+    "pr3 = plt.imread(\"figures/blue.png\")   # background reference image\n",
     "for ax, pr in zip([ax1, ax2, ax3],[pr1,pr2,pr3]):\n",
     "    ax.imshow(pr)\n",
     "    ax.set_xticks([])\n",
@@ -230,13 +233,15 @@
     "# principal component plot\n",
     "nc = frames[-1]\n",
     "std = np.std(pca.transform(data.reshape((N,-1)))[:,:nc], axis=0)\n",
-    "axp.fill_between(np.arange(nc)+1, -std, std, color='C0',alpha=0.2, label='1 standard deviation\\nacross dataset')\n",
+    "axp.fill_between(np.arange(nc)+1, -std, std, color='C0',\n",
+    "                 alpha=0.2, label='1 standard deviation\\nacross dataset') # standard deviation of PC across dataset\n",
     "axp.scatter(np.tile((np.arange(nc)+1).reshape((1,-1)),(N,1)),\n",
-    "            pca.transform(data.reshape((N,-1)))[:,:nc], alpha=0.1, color='C0', s=1)\n",
+    "            pca.transform(data.reshape((N,-1)))[:,:nc], alpha=0.1, color='C0', s=1) # PC values of complete dataset\n",
     "axp.stem(np.arange(nc)+1, pca.transform(im_b.reshape((1,-1)))[0,:frames[-1]], \n",
-    "          linefmt='C0-', markerfmt='C0.', basefmt='gold', label='selected image')\n",
+    "          linefmt='C0-', markerfmt='C0.', basefmt='gold', label='selected image')   # PC values of selected image\n",
     "axp.set_ylim(-35,35)\n",
     "axp.tick_params(labelsize=14)\n",
+    "# principal component added in current frame, to update\n",
     "trace, = axp.plot(1, y[-1], '.', color='khaki', lw=3)\n",
     "line, = axp.plot([1,1], [0,y[-1]], color='darkslateblue', lw=2)\n",
     "pt, = axp.plot(1, y[-1], 'o', color='gold', mec=\"darkslateblue\")\n",
@@ -253,11 +258,14 @@
     "\n",
     "def animate(i):\n",
     "    '''Plot updates for animation.'''\n",
+    "    # image updates\n",
     "    data, red_pax, green_pax, blue_pax, y = get_images(i)\n",
-    "    im.set_data(data) # update reconstructed image\n",
-    "    red.set_data(red_pax)\n",
-    "    green.set_data(green_pax)\n",
-    "    blue.set_data(blue_pax)\n",
+    "    im.set_data(data)             # reconstructed image\n",
+    "    red.set_data(red_pax)         # principal axis projection: red channel \n",
+    "    green.set_data(green_pax)     # principal axis projection: green channel\n",
+    "    blue.set_data(blue_pax)       # principal axis projection: blue channel\n",
+    "    \n",
+    "    # principal component plot update\n",
     "    line.set_xdata([i,i])\n",
     "    line.set_ydata([0,y[-1]])\n",
     "    pt.set_xdata(i)\n",
